--- a/Tourister/main/templates/main/index.html
+++ b/Tourister/main/templates/main/index.html
@@ -7,12 +7,14 @@
 <!--start Background image-->
 <div class="wrapper homepage-content ">
     <div class="container ">
-        <div class="row d-flex align-items-center justify-content-center text-center h-100 grp-4">
-            <div class="text-white fonts">
-            <h1 class="mb-3 big-text  top-header-h1">Welcome to the premier tourism destination</h1>
-            <p class="mb-4 mt-3 fonts">Saudi Arabias rich heritage and traditions have been shaped by its position as a historic trade hub and the birthplace of Islam. In recent years, the Kingdom has undergone a significant cultural transformation, evolving century-old customs to fit the contemporary world we live in today, and one of the sectors that were significantly changed is tourism in Saudi Arabia</p>
+    
+        <div class="row d-flex align-items-center justify-content-center text-center h-100 grp-4 ">
+            <div class="text-white">
+            <h1 class="mb-3 big-text ">Welcome to the premier tourism destination</h1>
+            <p class="mb-4 mt-3">Saudi Arabias rich heritage and traditions have been shaped by its position as a historic trade hub and the birthplace of Islam. In recent years, the Kingdom has undergone a significant cultural transformation, evolving century-old customs to fit the contemporary world we live in today, and one of the sectors that were significantly changed is tourism in Saudi Arabia</p>
             </div>
         </div>
+
     <div class="row d-flex align-items-center justify-content-center text-center h-100 pt-5">
         <div class="col-9 ">
             <h2 class="text-white mt-5"> Tourist destinations </h2>
@@ -61,5 +63,4 @@
     </div>
 </div>
   <!-- end Background image -->
-
 {% endblock  %}
