--- a/Tourister/main/templates/main/riyadh.html
+++ b/Tourister/main/templates/main/riyadh.html
@@ -75,7 +75,7 @@
         <div class="col-md-7 text-center ">
           <div class="mx-auto p-5">
           <h2 class="featurette-heading fw-normal lh-1 mx-auto p-2 pb-4">Saudi National Museum </h2>
-          <p class="lead ">From the Earth to the Moon, and from prehistoric times to the modern era, the corridors of the Saudi National Museum take you on an exciting journey, transcending time and space, and standing on artistic and historical evidence in the heart of the city of Riyadh..</p>
+          <p class="lead css-typing">From the Earth to the Moon, and from prehistoric times to the modern era, the corridors of the Saudi National Museum take you on an exciting journey, transcending time and space, and standing on artistic and historical evidence in the heart of the city of Riyadh..</p>
         </div>
         </div>
         <div class="col-md-5">
